assignment_01/instructor_stderr.txt
  File "create_flight_schedule.py", line 92
    def NextDeptTime (T,Arrival,Dest):
      ^
SyntaxError: invalid syntax
